Background blur added

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,5 +4,8 @@
     ViewData["Title"] = "Cherished";
 }
 
-<div id="main">
+<div id="main" class="ch-container">
+    <div class="ch-background"></div>
+    <div class="ch-image"><img /></div>
+    <div class="ch-status"></div>
 </div>
