--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2,18 +2,51 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: #CCCCCC;
 }
 
 .ch-container{
+  position: relative;
   height: 100%;
   text-align: center;
   overflow: hidden;
 }
 
-.ch-image-h{
+.ch-background{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
+  background-size: cover;
+  background-position: center;
+  filter: blur(40px);
+  z-index: 0;
 }
 
-.ch-image-w{
+.ch-image{
   width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+}
+
+.ch-image img{
+  border: 8px solid #FFFFFF;
+  box-sizing:content-box;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit:contain;
+}
+
+.ch-status{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 10px;
+  z-index: 2;
 }
