--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2,7 +2,8 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #CCCCCC;
+  background-color: #000000;
+  cursor: none;
 }
 
 .ch-container{
