--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,4 +8,27 @@
     <div class="ch-background"></div>
     <div class="ch-image"><img /></div>
     <div class="ch-status"></div>
+    <div class="ch-controls">
+        <button class="ch-button ch-button-prev" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" height="80%" fill="#444444" viewBox="0 0 512 512">
+            <path
+                d="M 258 80 Q 253 80 250 83 L 19 250 L 19 250 Q 16 252 16 256 Q 16 260 19 263 L 250 429 L 250 429 Q 253 432 258 432 Q 271 431 272 418 L 272 94 L 272 94 Q 271 81 258 80 L 258 80 Z M 258 64 Q 271 64 279 73 L 279 73 L 279 73 Q 288 81 288 94 L 288 197 L 288 197 L 464 70 L 464 70 Q 472 64 482 64 Q 495 64 503 73 Q 512 81 512 94 L 512 418 L 512 418 Q 512 431 503 439 Q 495 448 482 448 Q 472 448 464 442 L 288 315 L 288 315 L 288 418 L 288 418 Q 288 431 279 439 Q 271 448 258 448 Q 248 448 240 442 L 10 275 L 10 275 Q 0 268 0 256 Q 0 244 10 237 L 240 70 L 240 70 Q 248 64 258 64 L 258 64 Z M 288 295 L 474 429 L 288 295 L 474 429 Q 477 432 482 432 Q 495 431 496 418 L 496 94 L 496 94 Q 495 81 482 80 Q 477 80 474 83 L 288 217 L 288 217 L 288 295 L 288 295 Z"
+            />
+            </svg>
+        </button>
+        <button class="ch-button ch-button-next" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" height="80%" fill="#444444" viewBox="0 0 512 512">
+            <path
+                d="M 254 80 Q 259 80 262 83 L 493 250 L 493 250 Q 496 252 496 256 Q 496 260 493 263 L 262 429 L 262 429 Q 259 432 254 432 Q 241 431 240 418 L 240 94 L 240 94 Q 241 81 254 80 L 254 80 Z M 254 64 Q 241 64 233 73 L 233 73 L 233 73 Q 224 81 224 94 L 224 197 L 224 197 L 48 70 L 48 70 Q 40 64 30 64 Q 17 64 9 73 Q 0 81 0 94 L 0 418 L 0 418 Q 0 431 9 439 Q 17 448 30 448 Q 40 448 48 442 L 224 315 L 224 315 L 224 418 L 224 418 Q 224 431 233 439 Q 241 448 254 448 Q 264 448 272 442 L 502 275 L 502 275 Q 512 268 512 256 Q 512 244 502 237 L 272 70 L 272 70 Q 264 64 254 64 L 254 64 Z M 224 295 L 38 429 L 224 295 L 38 429 Q 35 432 30 432 Q 17 431 16 418 L 16 94 L 16 94 Q 17 81 30 80 Q 35 80 38 83 L 224 217 L 224 217 L 224 295 L 224 295 Z"
+            />
+            </svg>
+        </button>
+        <button class="ch-button ch-button-flag" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" height="80%" fill="#444444" viewBox="0 0 512 512">
+            <path
+                d="M 48 8 Q 47 1 40 0 Q 33 1 32 8 L 32 32 L 32 32 L 32 48 L 32 48 L 32 336 L 32 336 L 32 352 L 32 352 L 32 504 L 32 504 Q 33 511 40 512 Q 47 511 48 504 L 48 352 L 48 352 L 468 352 L 468 352 Q 479 351 480 340 Q 480 336 478 333 L 368 192 L 368 192 L 478 51 L 478 51 Q 480 48 480 44 Q 479 33 468 32 L 48 32 L 48 32 L 48 8 L 48 8 Z M 48 48 L 460 48 L 48 48 L 460 48 L 355 182 L 355 182 Q 349 192 355 202 L 460 336 L 460 336 L 48 336 L 48 336 L 48 48 L 48 48 Z"
+            />
+            </svg>
+        </button>
+    </div>
 </div>
