--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -37,7 +37,7 @@ html, body {
 }
 
 .ch-image img{
-  border: 8px solid #FFFFFF;
+  border: 8px solid #523c38;
   box-sizing:content-box;
   max-width: 100%;
   max-height: 100%;
@@ -50,4 +50,27 @@ html, body {
   right: 0;
   padding: 10px;
   z-index: 2;
+}
+
+.paused .ch-controls{
+  position: absolute;
+  cursor: default;
+  display: flex;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 20%;
+  background-color: #00000066;
+  z-index: 3;
+  align-items: center;
+  justify-content: center;
+  gap: 4%;
+}
+
+.ch-button {
+  height: 80%;
+  aspect-ratio: 1;
+  background-color: #FFFFFF66;
+  border: 0px;
+  border-radius: 5%;
 }
