--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -45,11 +45,15 @@ html, body {
 }
 
 .ch-status{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.5em;
   position: absolute;
   bottom: 0;
   right: 0;
   padding: 10px;
   z-index: 2;
+  color: white;
+  text-shadow: #000000 2px 2px 4px;
 }
 
 .paused .ch-controls{
