Background loading delay fixed

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div id="main" class="ch-container">
-    <div class="ch-background"></div>
+    <div class="ch-background"><img /></div>
     <div class="ch-image"><img /></div>
     <div class="ch-status"></div>
     <div class="ch-controls">
