--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -9,25 +9,29 @@ html, body {
 }
 
 .ch-container {
-    position: relative;
-    height: 100%;
-    text-align: center;
-    overflow: hidden;
-    background-color: #000000;
-    cursor: none;
+  position: relative;
+  height: 100%;
+  text-align: center;
+  overflow: hidden;
+  background-color: #000000;
+  cursor: none;
 }
 
-.ch-background{
-  content: '';
+.ch-background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-size: cover;
-  background-position: center;
-  filter: blur(40px);
   z-index: 0;
+  overflow: hidden;
+}
+
+.ch-background img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  filter: blur(45px);
 }
 
 .ch-image{
