--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -23,12 +23,32 @@
             />
             </svg>
         </button>
-        <button class="ch-button ch-button-flag" type="button">
-            <svg xmlns="http://www.w3.org/2000/svg" height="80%" fill="#444444" viewBox="0 0 512 512">
-            <path
-                d="M 48 8 Q 47 1 40 0 Q 33 1 32 8 L 32 32 L 32 32 L 32 48 L 32 48 L 32 336 L 32 336 L 32 352 L 32 352 L 32 504 L 32 504 Q 33 511 40 512 Q 47 511 48 504 L 48 352 L 48 352 L 468 352 L 468 352 Q 479 351 480 340 Q 480 336 478 333 L 368 192 L 368 192 L 478 51 L 478 51 Q 480 48 480 44 Q 479 33 468 32 L 48 32 L 48 32 L 48 8 L 48 8 Z M 48 48 L 460 48 L 48 48 L 460 48 L 355 182 L 355 182 Q 349 192 355 202 L 460 336 L 460 336 L 48 336 L 48 336 L 48 48 L 48 48 Z"
-            />
-            </svg>
+        <button class="ch-button ch-button-hide" type="button">
+            <svg height="80%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+				<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+				<g id="SVGRepo_iconCarrier"> 
+					<path d="M14.83 9.17999C14.2706 8.61995 13.5576 8.23846 12.7813 8.08386C12.0049 7.92926 11.2002 8.00851 10.4689 8.31152C9.73758 8.61453 9.11264 9.12769 8.67316 9.78607C8.23367 10.4444 7.99938 11.2184 8 12.01C7.99916 13.0663 8.41619 14.08 9.16004 14.83" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+					<path d="M12 16.01C13.0609 16.01 14.0783 15.5886 14.8284 14.8384C15.5786 14.0883 16 13.0709 16 12.01" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+					<path d="M17.61 6.39004L6.38 17.62C4.6208 15.9966 3.14099 14.0944 2 11.99C6.71 3.76002 12.44 1.89004 17.61 6.39004Z" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+					<path d="M20.9994 3L17.6094 6.39" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+					<path d="M6.38 17.62L3 21" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+					<path d="M19.5695 8.42999C20.4801 9.55186 21.2931 10.7496 21.9995 12.01C17.9995 19.01 13.2695 21.4 8.76953 19.23" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+				</g>
+			</svg>
+        </button>
+		<button class="ch-button ch-button-delete" type="button">
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+				<g id="SVGRepo_iconCarrier"> 
+					<path d="M10 12V17" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+					<path d="M14 12V17" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+					<path d="M4 7H20" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+					<path d="M6 10V18C6 19.6569 7.34315 21 9 21H15C16.6569 21 18 19.6569 18 18V10" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+					<path d="M9 5C9 3.89543 9.89543 3 11 3H13C14.1046 3 15 3.89543 15 5V7H9V5Z" stroke="#444444" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> 
+				</g>
+			</svg>
         </button>
     </div>
 </div>
